<?xml version="1.0"?>
<package>
  <name>hslam_ros</name>
  <version>1.0.0</version>
  <description>

    ROS Wrapper HSLAM.

  </description>

  <author>Jakob Engel</author>
  <license>see http://vision.in.tum.de/dso</license>
  <maintainer email="engelj-@in-dot-tum-dot.de">
    Jakob Engel
  </maintainer>
  <!-- <review status="unreviewed" notes=""/> -->
  <url>http://vision.in.tum.de/dso</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>


  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pcl_conversions</run_depend>

</package>
